--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </script>
   <link rel="manifest" href="/Tc-Coin-Blockchain/manifest.json" />
   <title>Tc Coin Blockchain</title>
-  <link rel="stylesheet" href="/Tc-Coin-Blockchain/styles.css" />
+  <link rel="stylesheet" href="/Tc-Coin/styles.css" />
 </head>
 
 <body>
