--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <meta name="keywords" content="Tc Coin, blockchain, decentralized, Troanary, PWA" />
   <meta property="og:title" content="Tc Coin Blockchain" />
   <meta property="og:description" content="Earn Tc Coins through time, trust, and sharing in a decentralized blockchain app." />
-  <meta property="og:image" content="https://webswiftseo.github.io/Tc-Coin-Blockchain/images/coin-tc-blockchain-512x512.webp" />
-  <meta property="og:url" content="https://webswiftseo.github.io/Tc-Coin-Blockchain/" />
+  <meta property="og:image" content="https://webswiftseo.github.io/Tc-Coin/images/coin-tc-blockchain-512x512.webp" />
+  <meta property="og:url" content="https://webswiftseo.github.io/Tc-Coin/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Tc Coin Blockchain" />
   <meta name="twitter:description" content="Earn Tc Coins through time, trust, and sharing in a decentralized blockchain app." />
-  <meta name="twitter:image" content="https://webswiftseo.github.io/Tc-Coin-Blockchain/images/coin-tc-blockchain-512x512.webp" />
+  <meta name="twitter:image" content="https://webswiftseo.github.io/Tc-Coin/images/coin-tc-blockchain-512x512.webp" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebApplication",
     "name": "Tc Coin Blockchain",
     "description": "A decentralized blockchain app based on Troanary principles.",
-    "url": "https://webswiftseo.github.io/Tc-Coin-Blockchain/"
+    "url": "https://webswiftseo.github.io/Tc-Coin/"
   }
   </script>
-  <link rel="manifest" href="/Tc-Coin-Blockchain/manifest.json" />
+  <link rel="manifest" href="/Tc-Coin/manifest.json" />
   <title>Tc Coin Blockchain</title>
   <link rel="stylesheet" href="/Tc-Coin/styles.css" />
 </head>
@@ -90,6 +90,6 @@
     </div>
   </footer>
 
-  <script src="/Tc-Coin-Blockchain/app.js"></script>
+  <script src="/Tc-Coin/app.js"></script>
 </body>
 </html>
